--- a/src/main/resources/templates/registerAndDeliverCar.html
+++ b/src/main/resources/templates/registerAndDeliverCar.html
@@ -45,7 +45,7 @@
                     <input type="text" id="deliveryAddress" name="deliveryAddress" required>
 
                     <label for="subscriptionType_${car.carId}">Abonnementstype:</label>
-                    <select id="subscriptionType_${car.carId}" name="subscriptionType" class="subscriptionType" required>
+                    <select id="subscriptionType_${car.carId}" name="subscriptionType" required>
                         <option value="unlimited">Unlimited</option>
                         <option value="limited">Limited</option>
                     </select>
