--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -8,6 +8,10 @@ body {
 }
 
 .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
     text-align: center;
     padding: 20px;
     background-color: #ffffff;
@@ -81,7 +85,8 @@ body {
     grid-gap: 30px;
     padding: 30px 20px;
 }
- .card {
+
+.card {
     background-color: #ffffff;
     padding: 20px;
     border-radius: 8px;
@@ -100,6 +105,11 @@ body {
    background-color: #003087;
    color: #ffffff;
    border-radius: 5px;
+}
+
+#damageReportDashboard {
+    display: flex;
+    justify-content: center;
 }
 
 /* Stilarter for login-siden (login.html) */
@@ -192,11 +202,10 @@ body {
 /* Styling for the search dashboard */
 .search-dashboard {
     background-color: #ffffff;
-    padding: 30px;
+    padding: 15px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    max-width: 600px;
-    margin: 30px auto;
+    margin: 5px auto;
     text-align: left;
 }
 
