--- a/src/main/resources/templates/employeeEdit.html
+++ b/src/main/resources/templates/employeeEdit.html
@@ -25,18 +25,27 @@
   </section>
 
   <main class="main-content">
+
+    <div class="search-dashboard">
     <form th:action="@{/employee/edit/{id}(id=${employee.employeeId})}" th:object="${employee}" method="post">
       <label for="username">Brugernavn:</label>
       <input type="text" id="username" th:field="*{username}" required />
 
+      <label for="password" >Ny adgangskode:</label>
+      <input type="text" id="password" th:field="*{password}" required />
+
       <label for="fullName">Fulde navn:</label>
       <input type="text" id="fullName" th:field="*{fullName}" required />
 
-      <label for="role">Rolle:</label>
-      <input type="text" id="role" th:field="*{role}" required />
+      <label for="signup-role">Rolle</label>
+      <select id="signup-role" name="role" required>
+        <option value="EMPLOYEE">Employee</option>
+        <option value="ADMIN">Admin</option>
+      </select>
 
       <button type="submit">Gem ændringer</button>
     </form>
+    </div>
   </main>
 
   <div class="footer">
