--- a/src/main/resources/templates/employeeOverviewAdmin.html
+++ b/src/main/resources/templates/employeeOverviewAdmin.html
@@ -46,7 +46,7 @@
           <td th:text="${employee.fullName}"></td>
           <td th:text="${employee.role}"></td>
           <td>
-            <a th:href="@{'/employee/' + ${employee.employeeId}}" class="btn-details">Se detaljer</a>
+            <a th:href="@{'/employee/' + ${employee.employeeId}}" class="btn-details">Detaljer</a>
           </td>
         </tr>
         </tbody>
@@ -67,6 +67,7 @@
         <label for="signup-password">Adgangskode</label>
         <input type="password" id="signup-password" name="password" placeholder="Indtast adgangskode" required minlength="8"
                title="Adgangskoden skal være mindst 8 tegn lang.">
+
 
         <label for="signup-role">Rolle</label>
         <select id="signup-role" name="role" required>
