--- a/src/main/resources/templates/employeeEdit.html
+++ b/src/main/resources/templates/employeeEdit.html
@@ -29,7 +29,7 @@
     <div class="search-dashboard">
     <form th:action="@{/employee/edit/{id}(id=${employee.employeeId})}" th:object="${employee}" method="post">
       <label for="username">Brugernavn:</label>
-      <input type="text" id="username" th:field="*{username}" required />
+      <input type="text" id="username" th:field="*{username}" required readonly />
 
       <label for="password" >Ny adgangskode:</label>
       <input type="text" id="password" th:field="*{password}" required />
