--- a/src/main/resources/templates/carOverview.html
+++ b/src/main/resources/templates/carOverview.html
@@ -34,7 +34,7 @@
                  th:attr="data-available=${car.availableForLoan}, data-ready=${car.readyForUse}">
 
                 <div class="car-image">
-                    <img th:src="${car.image}" alt="Car image" class="car-img"/>
+                    <img th:src="${car.image}" alt="Intet Billede" class="car-img"/>
                 </div>
 
                 <h3 th:text="${car.brand} + ' ' + ${car.model}"></h3>
