Tilføjelse af leveringskalender, mangler stadig leveringsadresse fiks

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -1,4 +1,4 @@
-<!DOCTYPE  html>
+<!DOCTYPE html>
 <html lang="da" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
@@ -51,6 +51,12 @@
             <div class="card">
                 <h3>KPI Og Statisiker</h3>
                 <a th:href="@{/statistics}" class="btn-link">KPI- og statistikker</a>
+            </div>
+
+            <!-- New Button for Car Delivery Calendar -->
+            <div class="card">
+                <h3>Levering Kalender</h3>
+                <a th:href="@{/carDeliveryCalendar}" class="btn-link">Se Levering Kalender</a>
             </div>
 
             <!-- Søg Medarbejder - Betinget link afhængigt af rolle -->
