--- a/src/main/resources/templates/statistics.html
+++ b/src/main/resources/templates/statistics.html
@@ -52,7 +52,7 @@
     <!-- Knap til at opdatere statistik -->
     <div class="update-statistics">
       <form th:action="@{/statisticsCarList}" method="get">
-        <button type="submit" class="btn-update">Opdater Statistik</button>
+        <button type="submit" class="btn-update">Liste over alle bilers udlejningsperiode & tilgænglighedsperiode</button>
       </form>
     </div>
 
