--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -56,7 +56,7 @@
             <!-- New Button for Car Delivery Calendar -->
             <div class="card">
                 <h3>Levering Kalender</h3>
-                <a th:href="@{/carDeliveryCalendar}" class="btn-link">Se Levering Kalender</a>
+                <a th:href="@{/carDeliveryCalendar}" class="btn-link">Se Leveringskalender</a>
             </div>
 
             <!-- Søg Medarbejder - Betinget link afhængigt af rolle -->
