--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -55,7 +55,7 @@
 
             <!-- New Button for Car Delivery Calendar -->
             <div class="card">
-                <h3>Levering Kalender</h3>
+                <h3>Leveringskalender</h3>
                 <a th:href="@{/carDeliveryCalendar}" class="btn-link">Se Leveringskalender</a>
             </div>
 
