--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -34,7 +34,7 @@
             </div>
 
             <div class="card">
-                <h3>Levering Og Registrering</h3>
+                <h3>Levering og Registrering</h3>
                 <a th:href="@{/registerAndDeliverCar}" class="btn-link">Lever Og Registrering</a>
             </div>
 
@@ -49,7 +49,7 @@
             </div>
 
             <div class="card">
-                <h3>KPI Og Statisiker</h3>
+                <h3>KPI og Statisiker</h3>
                 <a th:href="@{/statistics}" class="btn-link">KPI- og statistikker</a>
             </div>
 
