--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -49,7 +49,7 @@
             </div>
 
             <div class="card">
-                <h3>KPI & Statisiker</h3>
+                <h3>KPI & Statistikker</h3>
                 <a th:href="@{/statistics}" class="btn-link">KPI- og statistikker</a>
             </div>
 
