--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -70,7 +70,7 @@
 
             <div class="card">
                 <h3>Besøg Bilabonnement.dk</h3>
-                <a href="https://bilabonnement.dk" class="btn-link" target="_blank" rel="noopener noreferrer">Gå til Hjemmeside</a>
+                <a href="https://bilabonnement.dk" class="btn-link" target="_blank" rel="noopener noreferrer">Gå Til Hjemmeside</a>
             </div>
         </section>
     </main>
