Forsøgt remake af skaderapport funktioner (få fejl, fikses i morgen). Opdatering af caroverview til at vise resterende dage korrekt

--- a/src/main/resources/templates/carOverview.html
+++ b/src/main/resources/templates/carOverview.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<div class="layout">
+<div  class="layout">
     <div class="header">
         <div class="logo">
             <a th:href="@{/dashboard}">
@@ -34,7 +34,7 @@
                  th:attr="data-available=${car.availableForLoan}, data-ready=${car.readyForUse}">
 
                 <div class="car-image">
-                    <img th:src="${car.image}" alt="Intet Billede" class="car-img"/>
+                    <img th:src="${car.image}" alt="Car image" class="car-img"/>
                 </div>
 
                 <h3 th:text="${car.brand} + ' ' + ${car.model}"></h3>
@@ -53,19 +53,8 @@
                 <div class="car-actions">
                     <a th:href="@{/cars/details/{id}(id=${car.carId})}" class="button-link">Se detaljer</a>
                     <a th:href="@{/cars/edit/{id}(id=${car.carId})}" class="button-link">Rediger bil</a>
-                    <br><br><br>
-                    <a th:href="@{'/cars/delete/' + ${car.carId}}" class="button-link"
-                       onclick="return confirm('Er du sikker på, at du vil slette denne bil?')">Slet</a>
-
-                    <!-- fix knap -->
-                    <form th:action="@{/cars/buy/{carId}(carId=${car.carId})}" method="post" style="display:inline;">
-                        <button type="submit" class="button-link" onclick="return confirm('Er du sikker på, at du vil købe denne bil?')">
-                            Køb bil
-                        </button>
-                    </form>
 
                 </div>
-
             </div>
         </section>
     </main>
