--- a/src/main/resources/templates/damageReportDone.html
+++ b/src/main/resources/templates/damageReportDone.html
@@ -35,8 +35,8 @@
             <h3>Skader</h3>
             <div th:each="damage, iterStat : ${damageList}">
                 <p><strong>Skade [[${iterStat.index + 1}]]:</strong></p>
-                <p>Beskrivelse: <span th:text="${damage.description}"></span></p>
-                <p>Pris: <span th:text="${#numbers.formatDecimal(damage.price, 1, 'COMMA', 2, 'POINT')}"></span> kr.</p>
+                <p>Beskrivelse: <span th:text="${damage.key}"></span></p>
+                <p>Pris: <span th:text="${#numbers.formatDecimal(damage.value, 1, 'COMMA', 2, 'POINT')}"></span> kr.</p>
                 <hr>
             </div>
 
