--- a/src/main/resources/templates/damageReportConfirmation.html
+++ b/src/main/resources/templates/damageReportConfirmation.html
@@ -18,7 +18,10 @@
       <a th:href="@{/}" class="back-btn">Log ud</a>
     </nav>
   </div>
-
+  <section class="hero">
+    <h1>Opret Skaderapport</h1>
+    <p>Udfyld herunder.</p>
+  </section>
   <main class="main-content">
     <section class="damageReportForm">
       <h2 th:text="'Laver skaderapport på bil ID: ' + ${car.carId} + ', Mærke: ' + ${car.brand} + ', Model: ' + ${car.model}">Bil-info</h2>
