--- a/src/main/resources/templates/damageReportDone.html
+++ b/src/main/resources/templates/damageReportDone.html
@@ -20,10 +20,11 @@
         </nav>
     </div>
 
+    <section class="hero">
+        <h1>Færdigudfyldt Skadesrapport</h1>
+    </section>
     <main class="main-content">
         <section class="confirmation">
-            <h1>Skaderapport</h1>
-
             <h3>Kundeinformation</h3>
             <p><strong>Navn:</strong> <span th:text="${rental.customerName}"></span></p>
             <p><strong>Email:</strong> <span th:text="${rental.customerEmail}"></span></p>
