--- a/src/main/resources/templates/damageReportDone.html
+++ b/src/main/resources/templates/damageReportDone.html
@@ -55,9 +55,9 @@
 
             <div style="margin-top: 2rem;">
                 <a th:href="@{/damageReport}" class="btn-link">Gå tilbage til skaderapporter</a>
-                <a button onclick="window.print()" class="btn-link" style="margin-bottom: 1rem;">Print som PDF</abutton> </a>
-
+                <a href="#" onclick="window.print()" class="btn-link" style="margin-bottom: 1rem; cursor: pointer;">Print som PDF</a>
             </div>
+
         </section>
 
     </main>
