layout+styling fixes

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -63,7 +63,7 @@
             <div class="card">
                 <h3>Se Medarbejderliste</h3>
                 <a th:if="${session.loggedInEmployee != null and session.loggedInEmployee.role == 'ADMIN'}"
-                   th:href="@{/employeeOverviewAdmin}" class="btn-link">Se Medarbejdere & Registrer Ny Bruger</a>
+                   th:href="@{/employeeOverviewAdmin}" class="btn-link">Se og registrer medarbejder</a>
                 <a th:unless="${session.loggedInEmployee != null and session.loggedInEmployee.role == 'ADMIN'}"
                    th:href="@{/employeeOverview}" class="btn-link">Se Medarbejdere</a>
             </div>
