--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -8,10 +8,6 @@ body {
 }
 
 .footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
     text-align: center;
     padding: 20px;
     background-color: #ffffff;
@@ -31,8 +27,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
     text-decoration: none;
+    padding: 25px;
 }
 
 .header {
@@ -80,16 +76,33 @@ body {
     margin-bottom: 30px;
 }
 .dashboard {
+    width: 100%;
     display: grid;
     justify-content: center;
-    grid-template-columns: repeat(3,1fr);
-    grid-gap: 30px;
-    padding: 30px 20px;
+    align-items: center;
+    grid-template-columns: repeat(4,1fr);
+    grid-gap: 15px;
+}
+
+.kpi-dashboard {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.statistics-dashboard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
 }
 
 .card {
     background-color: #ffffff;
-    padding: 20px;
+    padding: 15px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     text-align: center;
