Forsøgt ændring i visning af abonnementtype, periode og antal km i oversigt af biler

--- a/src/main/resources/templates/carDeliveryCalendar.html
+++ b/src/main/resources/templates/carDeliveryCalendar.html
@@ -27,11 +27,11 @@
 
     <section class="hero">
         <h1>Leveringskalender</h1>
+        <p>Se kommende leveringer af biler</p>
     </section>
 
     <main class="main-content">
         <div class="search-dashboard">
-            <h2>Kommende Leveringer</h2>
             <table class="styled-table">
                 <thead>
                 <tr>
