--- a/src/main/resources/templates/statisticsCarList.html
+++ b/src/main/resources/templates/statisticsCarList.html
@@ -28,10 +28,10 @@
     </section>
 
     <main class="main-content">
-        <section class="dashboard">
+        <section class="search-dashboard">
             <div class="card">
                 <h3>Liste over alle biler</h3>
-                <table>
+                <table class="styled-table">
                     <thead>
                     <tr>
                         <th>Bil ID</th>
